# webp

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MODULE.bazel  README.md  cargo-bazel-lock.json  cargo_deps.bzl  defs.bzl  plan.md  webp-rust-implementation-test-plan.md
crates/webp/: BUILD.bazel  Cargo.toml
crates/webp-testkit/: BUILD.bazel  Cargo.toml
crates/webp-testkit/src/: clic.rs  fixture.rs  lib.rs
crates/webp-testkit/tests/: external_clic_corpus.rs  external_reference_corpus.rs  external_upstream_corpus.rs
crates/webp-vp8/: BUILD.bazel  Cargo.toml
crates/webp-vp8/src/: bitstream.rs  bitstream_tests.rs  coefficients.rs  encoder.rs  encoder_tests.rs  entropy.rs  entropy_tests.rs  frame.rs  frame_tests.rs  intra.rs  intra_tests.rs  lib.rs  lib_tests.rs  loop_filter.rs  loop_filter_tests.rs  partition.rs  partition_tests.rs  quantization.rs  quantization_tests.rs  reconstruction.rs  reconstruction_tests.rs  test_support.rs  transform.rs  transform_tests.rs
crates/webp-vp8l/: BUILD.bazel  Cargo.toml
crates/webp-vp8l-color-cache/: BUILD.bazel  Cargo.toml
crates/webp-vp8l-color-cache/src/: lib.rs
crates/webp-vp8l-color-transform/: BUILD.bazel
crates/webp-vp8l-color-transform/src/: lib.rs
crates/webp-vp8l-huffman/: BUILD.bazel  Cargo.toml
crates/webp-vp8l-huffman/src/: lib.rs
crates/webp-vp8l-indexing/: BUILD.bazel  Cargo.toml
crates/webp-vp8l-indexing/src/: lib.rs
crates/webp-vp8l-literal/: BUILD.bazel  Cargo.toml
crates/webp-vp8l-literal/src/: decode_profile.rs  image_data.rs  inverse_color_tests.rs  inverse_predictor.rs  lib.rs  predictor_benchmark_tests.rs
crates/webp-vp8l/src/: lib.rs
crates/webp/examples/: animation_encode_bench.rs  vp8_encode_bench.rs
crates/webp/src/: api.rs  decoder_tests.rs  encoder.rs  encoder_tests.rs  incremental.rs  lib.rs
crates/webp/tests/: animation_encode_oracle.rs  external_animation_corpus.rs  external_upstream_corpus.rs  vp8_encoder_oracle.rs  vp8_libwebp_oracle.rs  vp8l_encoder_oracle.rs
fuzz/: Cargo.toml  README.md
fuzz/dictionaries/: webp.dict
fuzz/fuzz_targets/: incremental_raw.rs  vp8_bool_raw.rs  vp8_partition_raw.rs  vp8_transforms.rs  vp8l_huffman.rs  vp8l_transforms.rs
webp-rs/: .gitignore  BUILD.bazel  Cargo.toml  rustfmt.toml
webp-rs/alpha/: BUILD.bazel  Cargo.toml  README.md
webp-rs/alpha/src/: alpha.rs  alpha_tests.rs  encode.rs  encode_filter.rs  encode_filter_tests.rs  encode_huffman.rs  encode_huffman_tests.rs  encode_lz77.rs  encode_palette.rs  encode_tests.rs  encode_token_output.rs  encode_token_output_tests.rs  level_reduction.rs  level_reduction_tests.rs  lib.rs
webp-rs/animation/: BUILD.bazel  Cargo.toml
webp-rs/animation/src/: compositor.rs  lib.rs
webp-rs/container/: BUILD.bazel  Cargo.toml  README.md
webp-rs/container/examples/: demux_bench.rs  mux_editor_bench.rs
webp-rs/container/src/: alpha.rs  animation.rs  animation_tests.rs  arithmetic.rs  chunk.rs  container.rs  container_tests.rs  demux.rs  demux_tests.rs  editor.rs  editor_tests.rs  error.rs  fourcc.rs  layout.rs  lib.rs  metadata.rs  mux.rs  mux_tests.rs  options.rs  vp8x.rs
webp-rs/container/tests/: demux_api.rs  mux_editor_api.rs
webp-rs/core/: BUILD.bazel  Cargo.toml
webp-rs/core/src/: bit_io.rs  lib.rs  limits.rs
webp-rs/decode/: BUILD.bazel  Cargo.toml
webp-rs/decode/src/: animated_image.rs  animated_image_tests.rs  bit_io.rs  container_adapter.rs  error.rs  incremental.rs  incremental_riff.rs  incremental_tests.rs  inspection.rs  lib.rs  limits.rs  options.rs  static_image.rs
webp-rs/decode/tests/: external_animation_corpus.rs  external_upstream_corpus.rs  libwebp_animation_oracle.rs  vp8_libwebp_oracle.rs
webp-rs/demux/: BUILD.bazel  Cargo.toml
webp-rs/demux/src/: animation.rs  animation_tests.rs  arithmetic.rs  chunk.rs  demux.rs  demux_tests.rs  image_header.rs  image_header_tests.rs  layout.rs  lib.rs  options.rs
webp-rs/demux/tests/: public_api.rs
webp-rs/dsp/: BUILD.bazel  Cargo.toml
webp-rs/dsp/src/: lib.rs  vp8_loop_filter.rs  vp8_loop_filter_tests.rs  vp8_prediction.rs  vp8_prediction_tests.rs  vp8_reconstruction.rs  vp8_reconstruction_tests.rs  vp8_transforms.rs  vp8_transforms_tests.rs
webp-rs/encode/: BUILD.bazel  Cargo.toml
webp-rs/encode/src/: animated_image.rs  animation.rs  error.rs  lib.rs  options.rs  static_image.rs  static_image_tests.rs
webp-rs/encode/tests/: alpha_encoder_oracle.rs  alpha_writer_identity.rs  animation_encode.rs  animation_encode_oracle.rs  metadata_encode.rs  vp8_encoder_oracle.rs  vp8l_encoder_oracle.rs
webp-rs/fuzz/: Cargo.toml  README.md
webp-rs/fuzz/fuzz_targets/: animation_raw.rs  container_raw.rs  editor_raw.rs  incremental_raw.rs  vp8_bool_raw.rs  vp8_coefficients.rs  vp8_partition_raw.rs  vp8_residuals.rs  vp8_transforms.rs  vp8l_header_raw.rs  vp8l_huffman.rs  vp8l_raw.rs  vp8l_transforms.rs
webp-rs/mux/: BUILD.bazel  Cargo.toml
webp-rs/mux/src/: adapter.rs  chunk.rs  editor.rs  editor_tests.rs  frame.rs  lib.rs  mux.rs  mux_tests.rs  state.rs  wire.rs
webp-rs/mux/tests/: public_api.rs
webp-rs/sharpyuv/: BUILD.bazel  Cargo.toml
webp-rs/sharpyuv/src/: gamma.rs  kernels.rs  kernels_tests.rs  lib.rs
webp-rs/utils/: BUILD.bazel  Cargo.toml
webp-rs/utils/src/: lib.rs  tests.rs
webp-rs/vp8/: BUILD.bazel  Cargo.toml
webp-rs/vp8/src/: bitstream.rs  bitstream_tests.rs  encoder.rs  encoder_tests.rs  entropy.rs  entropy_tests.rs  frame.rs  frame_tests.rs  intra.rs  intra_tests.rs  lib.rs  loop_filter.rs  loop_filter_tests.rs  partition.rs  partition_tests.rs  (+6 more)
webp-rs/vp8l/: BUILD.bazel  Cargo.toml  README.md
webp-rs/vp8l-color-cache/: BUILD.bazel  Cargo.toml
webp-rs/vp8l-color-transform/: BUILD.bazel  Cargo.toml
webp-rs/vp8l-entropy/: BUILD.bazel  Cargo.toml
webp-rs/vp8l-huffman/: BUILD.bazel  Cargo.toml
webp-rs/vp8l-indexing/: BUILD.bazel  Cargo.toml
webp-rs/vp8l-literal/: BUILD.bazel  Cargo.toml
webp-rs/vp8l-transform/: BUILD.bazel  Cargo.toml
webp-rs/webp/: BUILD.bazel  Cargo.toml  README.md
webp-rs/xtask/: BUILD.bazel
(+1355 files in other folders)
