package(default_visibility = ["//visibility:public"])

# Tests resolve fixtures through CARGO_MANIFEST_DIR/../../tests. Declaring the
# complete directory here makes those source files available in Bazel sandboxes.
filegroup(
    name = "test_data",
    srcs = glob(["tests/**"]),
)

filegroup(
    name = "corpus_lock",
    srcs = ["tools/corpus-lock.toml"],
)

# External corpora are intentionally Git-ignored. They are injected as
# runfiles only by CI jobs that fetch them before explicitly running the
# corresponding manual Bazel tests.
filegroup(
    name = "external_corpus_data",
    srcs = glob(["third_party/corpus/**"]),
)
