[workspace]
members = [
    "crates/webp-core",
    "crates/webp-container",
    "crates/webp-vp8l",
    "crates/webp-vp8l-transform",
    "crates/webp-vp8l-entropy",
    "crates/webp-vp8l-huffman",
    "crates/webp-vp8l-color-cache",
    "crates/webp-vp8l-color-transform",
    "crates/webp-vp8l-literal",
    "crates/webp-vp8l-indexing",
    "crates/webp-testkit",
    "crates/webp",
    "xtask",
]
default-members = ["crates/webp"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/webp-rs"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
thiserror = "2.0.17"
toml = "0.9.8"
sha2 = "0.10.9"
