module(
    name = "webp_rs",
    version = "0.1.0",
)

# Keep the Bazel Rust toolchain and Cargo dependency resolver deterministic and
# compatible with the Rust language features used by the workspace.
bazel_dep(name = "rules_rust", version = "0.71.3")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.88.0"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//webp-rs:Cargo.lock",
    manifests = ["//webp-rs:Cargo.toml"],
)
use_repo(crate, "crates")
