module(
    name = "webp_rs",
    version = "0.1.0",
)

# Keep the Bazel Rust toolchain and Cargo dependency resolver deterministic,
# cross-platform, and compatible with the workspace's Rust language features.
bazel_dep(name = "llvm", version = "0.8.9")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_rs", version = "0.0.93")

toolchains = use_extension("@rules_rs//rs/toolchains:module_extension.bzl", "toolchains")
toolchains.toolchain(
    edition = "2024",
    version = "1.88.0",
)
use_repo(toolchains, "default_rust_toolchains")

# The rules_rs wrappers use this patched rules_rust facade internally.
patched_rules_rust = use_extension("@rules_rs//rs:rules_rust.bzl", "rules_rust")
use_repo(patched_rules_rust, "rules_rust")

register_toolchains(
    "@default_rust_toolchains//:all",
    "@llvm//toolchain:all",
)

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lock = "//webp-rs:Cargo.lock",
    cargo_toml = "//webp-rs:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-pc-windows-msvc",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(crate, "crates")
