[package]
name = "webp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
webp = { path = "../crates/webp" }

[[bin]]
name = "container_raw"
path = "fuzz_targets/container_raw.rs"
test = false
doc = false
bench = false

[[bin]]
name = "incremental_raw"
path = "fuzz_targets/incremental_raw.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vp8l_header_raw"
path = "fuzz_targets/vp8l_header_raw.rs"
test = false
doc = false
bench = false
