[workspace]
members = [
    "core",
    "alpha",
    "animation",
    "container",
    "vp8",
    "vp8l",
    "vp8l-transform",
    "vp8l-entropy",
    "vp8l-huffman",
    "vp8l-color-cache",
    "vp8l-color-transform",
    "vp8l-literal",
    "vp8l-indexing",
    "webp",
    "xtask",
]
default-members = ["webp"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/webp-rs"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
thiserror = "2.0.17"
toml = "0.9.8"
