[workspace]
members = [
    "container",
    "decode",
    "demux",
    "dsp",
    "encode",
    "mux",
    "sharpyuv",
    "utils",
    "webp",
    "xtask",
]
default-members = ["webp"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/webp-rs"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
bytemuck = "1.25.2"
thiserror = "2.0.17"
toml = "0.9.8"
wide = "0.7.33"
