load("@crates//:defs.bzl", "all_crate_deps", "aliases", "crate_edition")
load("//:defs.bzl", "webp_rust_crate")
load("@rules_rust//rust:defs.bzl", "rust_test")

webp_rust_crate(
    name = "webp_testkit",
    aliases = aliases(),
    edition = crate_edition(),
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_test(
    name = "external_reference_corpus_test",
    aliases = aliases(),
    crate_root = "tests/external_reference_corpus.rs",
    srcs = ["tests/external_reference_corpus.rs"],
    edition = crate_edition(),
    data = ["//:external_corpus_data"],
    deps = [":webp_testkit"],
    tags = ["external-corpus", "manual"],
)

rust_test(
    name = "external_upstream_corpus_test",
    aliases = aliases(),
    crate_root = "tests/external_upstream_corpus.rs",
    srcs = ["tests/external_upstream_corpus.rs"],
    edition = crate_edition(),
    data = ["//:external_corpus_data"],
    deps = [":webp_testkit"],
    tags = ["external-corpus", "manual"],
)
