[package]
name = "webp-testkit"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Fixture manifests and deterministic fixture runners for the WebP test suite"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"
