[package]
name = "webp-vp8"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe Rust VP8 lossy WebP decoder primitives"

[lints]
workspace = true

[dependencies]
webp-core = { path = "../webp-core" }
