load("//:defs.bzl", "webp_rust_crate")

webp_rust_crate(
    name = "webp_vp8l_literal",
    deps = [
        "//crates/webp-core:webp_core",
        "//crates/webp-vp8l:webp_vp8l",
        "//crates/webp-vp8l-color-cache:webp_vp8l_color_cache",
        "//crates/webp-vp8l-color-transform:webp_vp8l_color_transform",
        "//crates/webp-vp8l-entropy:webp_vp8l_entropy",
        "//crates/webp-vp8l-huffman:webp_vp8l_huffman",
        "//crates/webp-vp8l-indexing:webp_vp8l_indexing",
        "//crates/webp-vp8l-transform:webp_vp8l_transform",
    ],
)
