[package]
name = "webp-vp8l-literal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Bounded no-transform VP8L entropy decoder"

[lints]
workspace = true

[dependencies]
webp-core = { path = "../webp-core" }
webp-vp8l = { path = "../webp-vp8l" }
webp-vp8l-huffman = { path = "../webp-vp8l-huffman" }
webp-vp8l-entropy = { path = "../webp-vp8l-entropy" }
