[package]
name = "webp-vp8l"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe Rust VP8L lossless WebP decoder primitives"

[lints]
workspace = true

[dependencies]
webp-core = { path = "../webp-core" }
