load("//:defs.bzl", "webp_rust_crate")
load("@rules_rust//rust:defs.bzl", "rust_test")

webp_rust_crate(
    name = "webp",
    deps = [
        "//crates/webp-container:webp_container",
        "//crates/webp-core:webp_core",
        "//crates/webp-vp8:webp_vp8",
        "//crates/webp-vp8l:webp_vp8l",
        "//crates/webp-vp8l-literal:webp_vp8l_literal",
    ],
    test_compile_data = ["//:test_data"],
    test_data = ["//:test_data"],
    test_deps = ["//crates/webp-testkit:webp_testkit"],
)

rust_test(
    name = "external_animation_corpus_test",
    crate_root = "tests/external_animation_corpus.rs",
    srcs = ["tests/external_animation_corpus.rs"],
    edition = "2024",
    data = ["//:external_corpus_data"],
    deps = [
        ":webp",
        "//crates/webp-testkit:webp_testkit",
    ],
    tags = ["external-corpus", "manual"],
)

rust_test(
    name = "external_upstream_corpus_test",
    crate_root = "tests/external_upstream_corpus.rs",
    srcs = ["tests/external_upstream_corpus.rs"],
    edition = "2024",
    data = ["//:external_corpus_data"],
    deps = [
        ":webp",
        "//crates/webp-container:webp_container",
        "//crates/webp-testkit:webp_testkit",
    ],
    tags = ["external-corpus", "manual"],
)
