[package]
name = "webp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Public safe-Rust WebP API"

[lints]
workspace = true

[dependencies]
webp-core = { path = "../webp-core" }
webp-container = { path = "../webp-container" }
webp-vp8 = { path = "../webp-vp8" }
webp-vp8l = { path = "../webp-vp8l" }
webp-vp8l-literal = { path = "../webp-vp8l-literal" }
