[package]
name = "webp-alpha"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebP ALPH payload encoder and decoder"

[features]
benchmark-internals = []

[lints]
workspace = true

[dependencies]
webp-core = { path = "../core" }
webp-vp8l-literal = { path = "../vp8l-literal" }
