[package]
name = "webp-vp8l-literal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Bounded no-transform VP8L entropy decoder"

[lints]
workspace = true

[dependencies]
webp-core = { path = "../core" }
webp-vp8l = { path = "../vp8l" }
webp-vp8l-huffman = { path = "../vp8l-huffman" }
webp-vp8l-entropy = { path = "../vp8l-entropy" }
webp-vp8l-color-cache = { path = "../vp8l-color-cache" }
webp-vp8l-color-transform = { path = "../vp8l-color-transform" }
webp-vp8l-indexing = { path = "../vp8l-indexing" }
webp-vp8l-transform = { path = "../vp8l-transform" }
